docs: add stardoc rules

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,15 +1,8 @@
 """rules_doxygen BUILD file"""
 
-load("@stardoc//stardoc:stardoc.bzl", "stardoc")
-
 exports_files([
     "Doxyfile.template",
     "doxygen.BUILD.bazel",
     "doxygen.bzl",
+    "extensions.bzl",
 ])
-
-stardoc(
-    name = "stardoc",
-    out = "stardoc.md",
-    input = "doxygen.bzl",
-)
