--- a/examples/doxyfile/BUILD.bazel
+++ b/examples/doxyfile/BUILD.bazel
@@ -6,10 +6,5 @@ doxygen(
         "*.h",
         "*.cpp",
     ]),
-    configurations = [
-        "USE_MDFILE_AS_MAINPAGE = doxyfile/README.md",
-        "ALIASES                = \"licence=@par Licence:^^\"",
-    ],
-    project_brief = "Example project for doxygen",
-    project_name = "doxyfile",
+    doxyfile_template = "Doxyfile"
 )
