docs: update examples

--- a/.bcr/presubmit.yml
+++ b/.bcr/presubmit.yml
@@ -14,3 +14,4 @@ bcr_test_module:
         - "//doxyfile:doxygen"
         - "//nested:doxygen"
         - "//custom:doxygen"
+        - "//awesome:doxygen"
