--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        subdir: [base, doxyfile, latex, nested, custom]
+        subdir: [base, doxyfile, latex, nested, custom, awesome]
     runs-on: ${{ matrix.os }}
 
     steps:
