--- a/.bcr/presubmit.yml
+++ b/.bcr/presubmit.yml
@@ -15,3 +15,4 @@ bcr_test_module:
         - "//nested:doxygen"
         - "//custom:doxygen"
         - "//awesome:doxygen"
+        - "//kwargs:doxygen"
