--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,9 +37,12 @@ jobs:
       - name: Install doxygen
         uses: ssciwr/doxygen-install@v1
       - name: Enable use of system doxygen by decommenting the module extension line
-        run: sed -i 's/# doxygen_extension.version(version = "0.0.0")/doxygen_extension.version(version = "0.0.0")/' MODULE.bazel
-        working-directory: examples
-        shell: bash
+        uses: jacobtomlinson/gha-find-replace@v3
+        with:
+          find: '# doxygen_extension.version(version = "0.0.0")'
+          replace: doxygen_extension.version(version = "0.0.0")
+          regex: false
+          include: examples/MODULE.bazel
       - name: Build ${{ matrix.subdir }}
         run: bazel build //${{ matrix.subdir }}:doxygen
         working-directory: examples
