chore: move doxygen repository files in subfolder

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,8 +1,8 @@
 """rules_doxygen BUILD file"""
 
 exports_files([
-    "Doxyfile.template",
-    "doxygen.BUILD.bazel",
-    "doxygen.bzl",
+    "doxygen/Doxyfile.template",
+    "doxygen/doxygen.BUILD.bazel",
+    "doxygen/doxygen.bzl",
     "extensions.bzl",
 ])
