ci: add macos tests

--- a/.bcr/presubmit.yml
+++ b/.bcr/presubmit.yml
@@ -1,7 +1,7 @@
 bcr_test_module:
   module_path: "examples"
   matrix:
-    platform: ["fedora40", "ubuntu2204", "windows"]
+    platform: ["fedora40", "ubuntu2204", "windows", "macos"]
     bazel: [7.x]
   tasks:
     run_tests:
