--- a/examples/MODULE.bazel
+++ b/examples/MODULE.bazel
@@ -6,6 +6,8 @@ local_path_override(
     path = "../",
 )
 
+bazel_dep(name = "aspect_bazel_lib", version = "2.9.4")
+
 doxygen_extension = use_extension("@rules_doxygen//:extensions.bzl", "doxygen_extension")
 
 # doxygen_extension with a system installation of doxygen
