--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        subdir: [base, kwargs, doxyfile, latex, nested, custom, awesome]
+        subdir: [base, kwargs, doxyfile, latex, nested, custom, awesome, substitutions]
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -32,7 +32,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        subdir: [base, kwargs, doxyfile, latex, nested, custom, awesome]
+        subdir: [base, kwargs, doxyfile, latex, nested, custom, awesome, substitutions]
     runs-on: ${{ matrix.os }}
 
     steps:
