--- a/examples/MODULE.bazel
+++ b/examples/MODULE.bazel
@@ -7,6 +7,7 @@ local_path_override(
 )
 
 bazel_dep(name = "aspect_bazel_lib", version = "2.9.4")
+bazel_dep(name = "bazel_skylib", version = "1.7.1")
 
 doxygen_extension = use_extension("@rules_doxygen//:extensions.bzl", "doxygen_extension")
 
