ci: add substitutions test target for bcr

--- a/.bcr/presubmit.yml
+++ b/.bcr/presubmit.yml
@@ -16,3 +16,4 @@ bcr_test_module:
         - "//custom:doxygen"
         - "//awesome:doxygen"
         - "//kwargs:doxygen"
+        - "//substitutions:doxygen"
