--- a/examples/substitutions/BUILD.bazel
+++ b/examples/substitutions/BUILD.bazel
@@ -2,15 +2,23 @@ load("@doxygen//:doxygen.bzl", "doxygen")
 load("//substitutions:make_var_substitution.bzl", "make_var_substitution")
 load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
 
+genrule(
+    name = "doxyfile_template",
+    srcs = ["Doxyfile.template"],
+    outs = ["NewDoxyfile"],
+    cmd = "sed s/{{PROJECT_NUMBER}}/$$(grep -oP '(?<=BUILD_EMBED_LABEL ).+' bazel-out/stable-status.txt)/ $(SRCS) > $@",
+    cmd_ps = "Get-content $(SRCS) | ForEach-Object { $$_ -replace '{{PROJECT_NUMBER}}', (Select-String -Pattern '(?<=BUILD_EMBED_LABEL +)(.+)' bazel-out/stable-status.txt -AllMatches | Select-Object -Expand Matches | Select-Object -Expand Value) } > $@",
+    stamp = -1,
+)
+
 string_flag(
-    name = "build_version",
-    build_setting_default = "0.0.0",
+    name = "build_description",
+    build_setting_default = "stamp fallback",
 )
 
 make_var_substitution(
     name = "make_var_substitution",
     variables = {
-        "DESCRIPTION": "Example project for doxygen using make vars substitutions",
         "NAME": "substitutions",
     },
 )
@@ -21,8 +29,8 @@ doxygen(
         "*.h",
         "*.cpp",
     ]),
-    project_brief = "$(DESCRIPTION)",
+    doxyfile_template = ":doxyfile_template",
+    project_brief = "$(BUILD_DESCRIPTION)",
     project_name = "$(NAME)",
-    project_number = "$(BUILD_VERSION)",
     toolchains = [":make_var_substitution"],
 )
