--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -181,12 +181,12 @@ jobs:
       - uses: actions/checkout@v4
       - name: Build submodules/${{ matrix.subdir }}
         run: bazel build //:doxygen
-        working-directory: submodules/${{ matrix.subdir }}
+        working-directory: examples/submodules/${{ matrix.subdir }}
       - name: Check output
         uses: andstor/file-existence-action@v3
         with:
-          files: submodules/${{ matrix.subdir }}/bazel-bin/html/index.html
+          files: examples/submodules/${{ matrix.subdir }}/bazel-bin/html/index.html
           fail: true
       - name: Check doxygen version in produced index.html
-        run: grep 'Doxygen 1.12.0' submodules/${{ matrix.subdir }}/bazel-bin/html/index.html
+        run: grep 'Doxygen 1.12.0' examples/submodules/${{ matrix.subdir }}/bazel-bin/html/index.html
         shell: bash
