--- a/examples/submodules/root/MODULE.bazel
+++ b/examples/submodules/root/MODULE.bazel
@@ -15,7 +15,7 @@ local_path_override(
 bazel_dep(name = "rules_doxygen", dev_dependency = True)
 local_path_override(
     module_name = "rules_doxygen",
-    path = "../../",
+    path = "../../../",
 )
 
 doxygen_extension = use_extension("@rules_doxygen//:extensions.bzl", "doxygen_extension")
