dep: add rules_foreign_cc dependency in examples

--- a/examples/MODULE.bazel
+++ b/examples/MODULE.bazel
@@ -8,6 +8,7 @@ local_path_override(
 
 bazel_dep(name = "aspect_bazel_lib", version = "2.10.0")
 bazel_dep(name = "bazel_skylib", version = "1.7.1")
+bazel_dep(name = "rules_foreign_cc", version = "0.14.0")
 
 doxygen_extension = use_extension("@rules_doxygen//:extensions.bzl", "doxygen_extension")
 
