ci: add dependencies example and remove some redundant tests

--- a/.bcr/presubmit.yml
+++ b/.bcr/presubmit.yml
@@ -17,3 +17,4 @@ bcr_test_module:
         - "//awesome:doxygen"
         - "//kwargs:doxygen"
         - "//substitutions:doxygen"
+        - "//dependencies:doxygen"
