docs: add doxylink example

--- a/.bcr/presubmit.yml
+++ b/.bcr/presubmit.yml
@@ -12,6 +12,7 @@ bcr_test_module:
         - "//base:doxygen"
         - "//latex:doxygen"
         - "//doxyfile:doxygen"
+        - "//doxylink:doxygen"
         - "//nested:doxygen"
         - "//custom:doxygen"
         - "//awesome:doxygen"
