--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
             base,
             kwargs,
             doxyfile,
+            doxylink,
             latex,
             nested,
             custom,
