chore: add example for plantuml

--- a/examples/BUILD.bazel
+++ b/examples/BUILD.bazel
@@ -1,1 +1,9 @@
 # exports_files(["doxygen"])
+load("@doxygen//:doxygen.bzl", "doxygen")
+
+doxygen(
+    name = "doxygen",
+    srcs = ["//:README.md"],
+    project_brief = "Root folder example",
+    project_name = "root",
+)
