docs: add example for executable

--- a/.bcr/presubmit.yml
+++ b/.bcr/presubmit.yml
@@ -19,3 +19,4 @@ bcr_test_module:
         - "//kwargs:doxygen"
         - "//substitutions:doxygen"
         - "//dependencies:doxygen"
+        - "//executable:doxygen"
