--- a/examples/submodules/submodule1/MODULE.bazel
+++ b/examples/submodules/submodule1/MODULE.bazel
@@ -6,6 +6,8 @@ local_path_override(
     path = "../../../",
 )
 
+bazel_dep(name = "platforms", version = "1.0.0")
+
 doxygen_extension = use_extension("@rules_doxygen//:extensions.bzl", "doxygen_extension")
 doxygen_extension.repository(name = "submodule1_doxygen")
 use_repo(doxygen_extension, "submodule1_doxygen")
