--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,7 @@ jobs:
             release_files: rules_doxygen-*.tar.gz
             prerelease: false
             tag_name: ${{ inputs.tag_name || github.ref_name }}
+            bazel_test_command: "bazel build //:extensions.bzl "
     publish:
         needs: release
         uses: ./.github/workflows/publish.yml
