--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        bazel: [7.0.0, 8.0.0]
+        bazel: [7.0.0, 8.0.0, rolling]
         subdir:
           [
             base,
@@ -99,7 +99,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        bazel: [7.0.0, 8.0.0]
+        bazel: [7.0.0, 8.0.0, rolling]
         subdir: [base]
     runs-on: ${{ matrix.os }}
     steps:
@@ -153,7 +153,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        bazel: [7.0.0, 8.0.0]
+        bazel: [7.0.0, 8.0.0, rolling]
         subdir: [base]
     runs-on: ${{ matrix.os }}
     steps:
@@ -220,7 +220,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        bazel: [7.0.0, 8.0.0]
+        bazel: [7.0.0, 8.0.0, rolling]
         subdir: [root, submodule1, submodule2]
     runs-on: ${{ matrix.os }}
 
