--- a/examples/nested/BUILD.bazel
+++ b/examples/nested/BUILD.bazel
@@ -16,3 +16,32 @@ doxygen(
     project_brief = "Example project for doxygen",
     project_name = "nested",
 )
+
+doxygen(
+    name = "doxygen_a",
+    srcs = ["//nested/lib_a:sources"],
+    outs = [
+        "a/html",
+        "a/tags",
+    ],
+    doxyfile_prefix = "a",
+    project_brief = "Example project for doxygen, library A",
+    project_name = "nested",
+    generate_tagfile = "$(OUTDIR)/tags/tagfile.xml",
+)
+
+doxygen(
+    name = "doxygen_b",
+        srcs = glob([
+        "lib_b/*.h",
+        "lib_b/*.cpp",
+    ]),
+    outs = [
+        "b/html",
+        "b/tags",
+    ],
+    doxyfile_prefix = "b",
+    project_brief = "Example project for doxygen, library B",
+    project_name = "nested",
+    generate_tagfile = "$(OUTDIR)/tags/tagfile.xml",
+)
